Add preference for custom register order in the regset